Feature/replace id token with access token as bearer auth (#19)
* [remove-id-token] - Get rid of idToken and replace it by accessToken.

* [remove-id-token] - Get rid of idToken and replace it by accessToken.

* [remove-id-token] - get rid of any trace of id-token.

* [remove-id-token] - get rid of any trace of id-token.

* Use access_token instead of bearer_token as system var name

* Use proper deletion parameters (#21)

* Fix method since singlelist parameters don't have list as answers

---------

Co-authored-by: Vila,Jordi (IT EDP) <jordi.vila@boehringer-ingelheim.com>